--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="mb-8 space-y-4">
             <div>
                 <label for="tourNameInput" class="block text-sm font-medium text-gray-900 mb-2">Tour/Travel Name</label>
-                <input type="text" id="tourNameInput" placeholder="e.g., Goa Trip 2023" class="block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 transition-colors">
+                <input type="text" id="tourNameInput" placeholder="e.g., Dwarka, Somnath Trip 2023" class="block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 transition-colors">
             </div>
             <div>
                 <label for="tripStartDate" class="block text-sm font-medium text-gray-900 mb-2">Trip Dates</label>
@@ -253,7 +253,7 @@
                 <form id="expenseForm" class="space-y-4">
                     <div>
                         <label for="description" class="block text-sm font-medium text-gray-900">Description</label>
-                        <input type="text" id="description" placeholder="e.g., Dinner, groceries, taxi fare" required class="mt-1 block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 transition-colors">
+                        <input type="text" id="description" placeholder="e.g., Train, Stay, Auto fare" required class="mt-1 block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 transition-colors">
                     </div>
                     <div>
                         <label for="amount" class="block text-sm font-medium text-gray-900">Amount (₹)</label>
@@ -378,7 +378,7 @@
     <div id="addPersonModal" class="fixed inset-0 bg-black bg-opacity-30 z-50 flex items-center justify-center hidden">
         <div class="main-container p-8 rounded-xl shadow-2xl max-w-sm w-full mx-4 transform transition-transform duration-300 scale-95 opacity-0" id="addPersonModalContent">
             <h3 class="text-xl font-bold text-gray-900 mb-4">Add People</h3>
-            <p class="text-sm text-gray-700 mb-4">Enter a comma-separated list of names (e.g., "Alice, Bob, Charlie")</p>
+            <p class="text-sm text-gray-700 mb-4">Enter a comma-separated list of names (e.g., "Harshad, Nilesh, Bhavik")</p>
             <input type="text" id="personInput" class="block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 transition-colors">
             <div class="flex justify-end gap-2 mt-4">
                 <button id="cancelAddPersonBtn" class="px-4 py-2 glass-button rounded-lg font-semibold hover:bg-gray-600 transition-colors">Cancel</button>
