--- a/index.html
+++ b/index.html
@@ -314,12 +314,15 @@
         
         <div class="mt-10">
             <h2 class="text-2xl font-bold text-gray-900 mb-4">Data Management</h2>
-            <div class="card p-6 rounded-xl flex flex-col sm:flex-row gap-4">
+            <div class="card p-6 rounded-xl flex flex-wrap gap-4">
                 <button id="exportDataBtn" class="flex-1 text-white py-2 px-4 rounded-lg font-semibold shadow-lg transition-colors duration-300 transform hover:scale-105 bg-gray-700 dark:bg-gray-700">
                     Export Data (JSON)
                 </button>
                 <button id="importDataBtn" class="flex-1 text-white py-2 px-4 rounded-lg font-semibold shadow-lg transition-colors duration-300 transform hover:scale-105 bg-gray-700 dark:bg-gray-700">
                     Import Data (JSON)
+                </button>
+                <button id="clearRecordsBtn" class="flex-1 bg-red-600 text-white py-2 px-4 rounded-lg font-semibold shadow-lg hover:bg-red-700 transition-colors duration-300 transform hover:scale-105">
+                    Clear All Records
                 </button>
                 <input type="file" id="fileInput" accept="application/json" class="hidden">
             </div>
@@ -466,6 +469,7 @@
             const exportDataBtn = document.getElementById('exportDataBtn');
             const importDataBtn = document.getElementById('importDataBtn');
             const fileInput = document.getElementById('fileInput');
+            const clearRecordsBtn = document.getElementById('clearRecordsBtn');
             const toastContainer = document.getElementById('toast-container');
             const toastMessage = document.getElementById('toast-message');
             const themeToggleBtn = document.getElementById('themeToggle');
@@ -1142,6 +1146,26 @@
 
             importDataBtn.addEventListener('click', () => {
                 fileInput.click();
+            });
+
+            clearRecordsBtn.addEventListener('click', () => {
+                showConfirm(
+                    "Clear All Records",
+                    "Are you sure you want to delete all tour info, people, and expenses? This action cannot be undone.",
+                    () => {
+                        tourName = 'Expense Splitter';
+                        tripStartDate = '';
+                        tripEndDate = '';
+                        people.length = 0;
+                        people.push('Harshad', 'Nilesh', 'Bharat', 'Bhavik');
+                        expenses.length = 0;
+
+                        saveData();
+                        renderAll();
+
+                        showAlert("Success", "All records have been cleared.");
+                    }
+                );
             });
 
             fileInput.addEventListener('change', (e) => {
