--- a/terms.html
+++ b/terms.html
@@ -23,7 +23,7 @@
         <div class="flex flex-wrap justify-between items-center mb-6 gap-y-2">
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-900">Terms and Conditions</h1>
             <div class="text-xs sm:text-sm space-x-2 sm:space-x-4 whitespace-nowrap">
-                <a href="index.html" class="text-gray-500 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400 transition-colors">Expense Tracker & Splitter</a>
+                <a href="index.html" class="text-gray-500 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400 transition-colors">Home</a>
                 <a href="privacy.html" class="text-gray-500 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400 transition-colors">Privacy</a>
                 <a href="terms.html" class="text-blue-500 hover:underline">Terms</a>
                 <a href="misuse.html" class="text-gray-500 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400 transition-colors">Acceptable Use</a>
