--- a/index.html
+++ b/index.html
@@ -264,6 +264,16 @@
             width: 100%;
             height: 100%;
         }
+        
+        /* Active Nav Link Style */
+        .active-link {
+            background-color: #3b82f6 !important;
+            color: #ffffff !important;
+        }
+        .active-link:hover {
+            background-color: #2563eb !important;
+        }
+
 
     </style>
 </head>
@@ -1440,4 +1450,3 @@
     </footer>
 </body>
 </html>
-
