--- a/misuse.html
+++ b/misuse.html
@@ -15,6 +15,7 @@
         body.dark{background-color:#111827;color:#d1d5db}body.dark::before{opacity:1}body.dark .main-container{backdrop-filter:blur(25px);-webkit-backdrop-filter:blur(25px);background-color:rgba(31,41,55,.5);border:1px solid rgba(255,255,255,.1);box-shadow:0 8px 32px 0 rgba(0,0,0,.2);color:#d1d5db}
         body.dark .text-gray-900{color:#d1d5db}body.dark .text-gray-700{color:#d1d5db}
         .switch{position:relative;display:inline-block;width:60px;height:34px}.switch input{opacity:0;width:0;height:0}.slider{position:absolute;cursor:pointer;top:0;left:0;right:0;bottom:0;background-color:#4b5563;transition:.4s;border-radius:34px}.slider:before{position:absolute;content:"";height:26px;width:26px;left:4px;bottom:4px;background-color:white;transition:.4s;border-radius:50%}input:checked+.slider{background-color:#2196F3}input:checked+.slider:before{transform:translateX(26px)}
+        .active-link {background-color: #3b82f6 !important; color: #ffffff !important;} .active-link:hover { background-color: #2563eb !important;}
     </style>
 </head>
 <body class="p-4 sm:p-8 pb-24 pt-24">
@@ -33,7 +34,7 @@
                         <a href="report.html" class="text-gray-700 dark:text-gray-300 hover:bg-gray-500/20 px-3 py-2 rounded-md text-sm font-medium">Report Issue</a>
                         <a href="terms.html" class="text-gray-700 dark:text-gray-300 hover:bg-gray-500/20 px-3 py-2 rounded-md text-sm font-medium">Terms</a>
                         <a href="privacy.html" class="text-gray-700 dark:text-gray-300 hover:bg-gray-500/20 px-3 py-2 rounded-md text-sm font-medium">Privacy</a>
-                        <a href="misuse.html" class="text-gray-700 dark:text-gray-300 hover:bg-gray-500/20 px-3 py-2 rounded-md text-sm font-medium">Acceptable Use</a>
+                        <a href="misuse.html" class="px-3 py-2 rounded-md text-sm font-medium active-link">Acceptable Use</a>
                     </div>
                 </div>
                  <div class="sm:hidden">
@@ -129,4 +130,3 @@
     </footer>
 </body>
 </html>
-
